Minor changes to cleanup